--- a/hangman/src/scss/variables.scss
+++ b/hangman/src/scss/variables.scss
@@ -1,6 +1,6 @@
 $color-body: rgba(170, 154, 170, 0.2);
 $color-background: rgb(206, 212, 218);
-$color-overlay: rgb(164, 170, 175, 0.8);
+$color-overlay: rgb(164, 170, 175, 0.9);
 $color-modal: rgb(223, 221, 223);
 $color-border: rgba(34, 60, 80, 0.1);
 $color-text: rgba(34, 60, 80);
